--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,4 +4,8 @@
         android:id="@+id/action_settings"
         android:orderInCategory="1"
         android:title="Настройки" />
+    <item
+        android:id="@+id/action_close"
+        android:orderInCategory="2"
+        android:title="Закрыть смену" />
 </menu>
