Добавлено много чего, в том числе проверка авторизации, меню, активити с дневным итогом (доделать, чтобы работало по представленной дате, в том числе текущей).

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,7 +5,11 @@
         android:orderInCategory="1"
         android:title="Настройки" />
     <item
-        android:id="@+id/action_close"
+        android:id="@+id/action_itog"
         android:orderInCategory="2"
+        android:title="Дневная выручка" />
+    <item
+        android:id="@+id/action_close"
+        android:orderInCategory="3"
         android:title="Закрыть смену" />
 </menu>
