--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -9,7 +9,11 @@
         android:orderInCategory="2"
         android:title="Дневная выручка" />
     <item
-        android:id="@+id/action_close"
+        android:id="@+id/action_checks"
         android:orderInCategory="3"
+        android:title="Чеки" />
+    <item
+        android:id="@+id/action_close"
+        android:orderInCategory="4"
         android:title="Закрыть смену" />
 </menu>
